# Agentic_AI

./: .gitignore  README.md
Config_Companion/: app.py  job_configs.db  main.py  pyproject.toml
Pipeline_Monitor/: main.py  requirements.txt
Pipeline_Monitor/agents/: detector_agent.py  knowledge_base_agent.py  recovery_agent.py  summarizer_agent.py  validator_agent.py
Pipeline_Monitor/dashboard/: streamlit_dashboard.py
Pipeline_Monitor/db/: incidents.db
Pipeline_Monitor/prefect_flows/: etl_flows.py
Pipeline_Monitor/simulation/: pipeline_simulator.py
Semantic-Layer-Generator/: agentic_semantic.py  app.py  main.py  pyproject.toml  semantic_poc.py
agentic-sql-ai/: main.py  pyproject.toml
agentic-sql-ai/backend/: requirements.txt
agentic-sql-ai/backend/app/: config.py  main.py  semantic_model.yaml
agentic-sql-ai/backend/app/agents/: agent_tools.py  sql_agent.py  validator_agent.py
agentic-sql-ai/backend/app/routes/: query.py
agentic-sql-ai/backend/app/utils/: logging_utils.py  prompt_templates.py  semantic_generator.py
agentic-sql-ai/frontend/: app.py
agentic-sql-ai/frontend/components/: query_history.py  query_input.py  query_results.py
auto_audit/: agents.py  app.py  config.py  db_manager.py  requirements.txt
auto_audit/agents/: base_agent.py  fix_agent.py  reporter_agent.py  rule_agent.py  scanner_agent.py
auto_audit/data/: audit.db
auto_audit/mcp/: broker.py
auto_audit/templates/: index.html  report.html
data_insight_team/: .gitignore  README.md  pyproject.toml
data_insight_team/src/data_insight_team/: Sales_Performance_Overview.pptx  crew.py  main.py  sales_data_q3.csv
data_insight_team/src/data_insight_team/config/: agents.yaml  tasks.yaml
enterprise-rag-platform/: feedback.db  main.py  pyproject.toml  requirements.txt
enterprise-rag-platform/backend/: feedback.db  feedback.py  hybrid_retriever.py  ingestion.py  main.py  mem.py  memory_retriever.py  models.py  retriever.py  streaming.py
enterprise-rag-platform/frontend/: app.py
enterprise-rag-platform/vector_store/: chroma.sqlite3
