[project]
name = "agentic-sql-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "openai>=2.1.0",
    "pydantic>=2.11.9",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "snowflake-connector-python>=3.17.4",
    "sqlparse>=0.5.3",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]
