[project]
name = "data_insight_team"
version = "0.1.0"
description = "Data_Insight_Team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0",
    "pandas>=2.3.2",
]

[project.scripts]
data_insight_team = "data_insight_team.main:run"
run_crew = "data_insight_team.main:run"
train = "data_insight_team.main:train"
replay = "data_insight_team.main:replay"
test = "data_insight_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
